--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,7 +1,7 @@
 # Install with conda
 # conda install -c conda-forge cyvlfeat
 scikit-image
-opencv-contrib-python
+opencv-contrib-python==4.3.0.38
 numpy
 matplotlib
 scipy
